--- a/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/home/home.component.html
+++ b/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/home/home.component.html
@@ -1,33 +1,41 @@
 <div class="container-fluid">
-    <div class="hero text-center py-5 banner-image">
+    <div class="hero text-center py-5 banner-image col-lg-12">
         <h1 class="display-3">Bienvenue sur DynamoCraft</h1>
-        <p class="lead">Explore des mods uniques, créations, et partage ton travail!</p>
+        <p class="lead d-flex justify-content-center">Explore des mods uniques, créations, et partage ton travail!</p>
     </div>
 
-    <div class="row text-center py-5">
-        <div class="col-md-12 col-lg-4  mb-4">
-            <div class="card bg-warning text-dark h-100">
+    <div class="row m-5">
+        <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
+            <div class="card card-background">
                 <div class="card-body">
-                    <h2 class="card-title font-dc text-center fs-5">Plongez dans un monde de créativité infinie !</h2>
-                    <p class="card-text">Explorez une variété de modèles uniques, allant des œuvres d'art aux gadgets innovants. Téléchargez-les instantanément et donnez vie à vos propres idées. Notre plateforme vous offre un accès illimité à une multitude de designs créés par des passionnés de l'impression 3D.</p>
+                    <h5 class="card-title d-flex justify-content-center font-dc">Créativités</h5>
+                    <p class="card-text text-black">Explorez une variété de modèles uniques, allant des œuvres d'art aux gadgets
+                        innovants. Téléchargez-les instantanément et donnez vie à vos propres idées. Notre plateforme
+                        vous offre un accès illimité à une multitude de designs créés par des passionnés de l'impression
+                        3D.</p>
                 </div>
             </div>
         </div>
-        <div class="col-md-12 col-lg-4  mb-4">
-            <div class="card bg-warning text-dark h-100">
+
+        <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
+            <div class="card card-background">
                 <div class="card-body">
-                    <h2 class="card-title font-dc text-center fs-5">Faites briller vos créations !</h2>
-                    <p class="card-text">Sur notre plateforme, vous avez la possibilité de partager vos propres modèles d'impression 3D avec une communauté mondiale. Publiez vos créations, obtenez des retours constructifs et inspirez d'autres utilisateurs avec votre talent unique.</p>
+                    <h5 class="card-title d-flex justify-content-center font-dc">Dépassements</h5>
+                    <p class="card-text text-black">Sur notre plateforme, vous avez la possibilité de partager vos propres modèles
+                        d'impression 3D avec une communauté mondiale. Publiez vos créations, obtenez des retours
+                        constructifs et inspirez d'autres utilisateurs avec votre talent unique.</p>
                 </div>
             </div>
         </div>
-        <div class="col-md-12 col-lg-4  mb-4">
-            <div class="card bg-warning text-dark h-100">
+
+        <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
+            <div class="card card-background">
                 <div class="card-body">
-                    <h2 class="card-title font-dc text-center fs-5">Réagissez aux créations des autres utilisateurs !</h2>
-                    <p class="card-text">Ne vous contentez pas de créer, engagez-vous avec la communauté en réagissant aux impressions des autres utilisateurs. Laissez des commentaires, donnez des conseils et partagez vos astuces pour améliorer encore plus les créations. Chaque modèle est une source d'inspiration et un moyen d'apprendre de nouvelles techniques.</p>
+                    <h5 class="card-title d-flex justify-content-center font-dc">Partages</h5>
+                    <p class="card-text text-black">Ne vous contentez pas de créer, engagez-vous avec la communauté en réagissant
+                        aux impressions des autres utilisateurs. Laissez des commentaires, donnez des conseils et
+                        partagez vos astuces pour améliorer encore plus les créations.</p>
                 </div>
             </div>
         </div>
     </div>
-</div>
