--- a/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/footer/footer.component.html
+++ b/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-dc-2 text-white text-center py-2 footer-gradient">
     <div class="container">
-        <p class="mb-0">&copy; 2024 Dynamo Craft. Tous droits réservés.</p>
+        <p class="mb-0 d-flex justify-content-center">&copy; 2024 DynamoCraft. Tous droits réservés.</p>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="#" class="text-white">Politique de confidentialité</a></li>
             <li class="list-inline-item"><a href="#" class="text-white">Conditions d'utilisation</a></li>
