Commit 20 Nouveauté(s) : * ajout d'un composant pour réaliser les tests api * ajout de l'environement pour urlApi * mise en place d'un service générique parent : - gestion des erreurs - crud  + getAll générique * mise en place du service catégorie : - getAllCategorie 🆗 - getCategorieById 🆗 - postCategorie 🆗 - updateCategorie 🆗
Amélioration(s) :
- refactorisation des fichiers angular pour une meilleure cohésion
- améliorations du responsive sur la page d'accueil
- refonte de la nav-bar

--- a/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/home/home.component.html
+++ b/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/home/home.component.html
@@ -5,11 +5,12 @@
     </div>
 
     <div class="row m-5">
-        <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 mb-3">
             <div class="card card-background">
                 <div class="card-body">
                     <h5 class="card-title d-flex justify-content-center font-dc">Créativités</h5>
-                    <p class="card-text text-black">Explorez une variété de modèles uniques, allant des œuvres d'art aux gadgets
+                    <p class="card-text text-black">Explorez une variété de modèles uniques, allant des œuvres d'art aux
+                        gadgets
                         innovants. Téléchargez-les instantanément et donnez vie à vos propres idées. Notre plateforme
                         vous offre un accès illimité à une multitude de designs créés par des passionnés de l'impression
                         3D.</p>
@@ -17,22 +18,24 @@
             </div>
         </div>
 
-        <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 mb-3">
             <div class="card card-background">
                 <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-center font-dc">Dépassements</h5>
-                    <p class="card-text text-black">Sur notre plateforme, vous avez la possibilité de partager vos propres modèles
+                    <h5 class="card-title d-flex justify-content-center font-dc">Partages</h5>
+                    <p class="card-text text-black">Sur notre plateforme, vous avez la possibilité de partager vos
+                        propres modèles
                         d'impression 3D avec une communauté mondiale. Publiez vos créations, obtenez des retours
                         constructifs et inspirez d'autres utilisateurs avec votre talent unique.</p>
                 </div>
             </div>
         </div>
 
-        <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 mb-3">
             <div class="card card-background">
                 <div class="card-body">
-                    <h5 class="card-title d-flex justify-content-center font-dc">Partages</h5>
-                    <p class="card-text text-black">Ne vous contentez pas de créer, engagez-vous avec la communauté en réagissant
+                    <h5 class="card-title d-flex justify-content-center font-dc">Echanges</h5>
+                    <p class="card-text text-black">Ne vous contentez pas de créer, engagez-vous avec la communauté en
+                        réagissant
                         aux impressions des autres utilisateurs. Laissez des commentaires, donnez des conseils et
                         partagez vos astuces pour améliorer encore plus les créations.</p>
                 </div>
