--- a/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -1,11 +1,15 @@
 <header class="p-3 bg-dc-2 text-white font-dc">
-    <div class="container col-12">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-center">
+    <div class="container">
+        <div
+            class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-center justify-content-lg-center">
             <a class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                 <img src="assets/png/logo.png" alt="logo" width="60" height="60">
                 <span class="navbar-brand font-dc text-white fs-4 ms-2">DynamoCraft</span>
             </a>
             <ul class="nav col-12 col-xl-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li>
+                    <a class="nav-link col-xl-auto px-2 ms-5" routerLink="/test">Test</a>
+                </li>
                 <li>
                     <a class="nav-link col-xl-auto px-2 ms-5" routerLink="/home">Catégories</a>
                 </li>
@@ -19,7 +23,7 @@
                     <a class="nav-link col-xl-auto px-2 ms-5" routerLink="/home">Recherche</a>
                 </li>
             </ul>
-            <div class="dropdown text-end d-flex ">
+            <div class="dropdown text-end">
                 <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="https://github.com/mdo.png" alt="mdo" width="40" height="40" class="rounded-circle">
