--- a/2.DynamoCraft.UI/DynamoCraft/src/styles.scss
+++ b/2.DynamoCraft.UI/DynamoCraft/src/styles.scss
@@ -85,8 +85,8 @@ p {
 
 .card-body {
     line-height: 2.2;
-    margin: 30px;
-    min-height: 400px;
+    min-height: 300px;
+    min-width: 450px;
 }
 
 ul.nav .nav-link {
