Commit 22 Nouveauté(s) : front-end * ajout du modèle utilisateur * mise en place du service pour les utlisateurs - getAllUtilisateurs 🆗 - getUtilisateurById 🆗 - updateUtilisateur 🆗 - deleteUtilisateur 🆗
Amélioration(s) :
Back-end
- améliorations de la méthode delete de l'utilisateur pour prendre en compte les donnée des tables parentes 🆗
- ajout d'un dossier services dans les outils de l'application

--- a/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/home/home.component.html
+++ b/2.DynamoCraft.UI/DynamoCraft/src/app/components/shared/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="row m-5">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 mb-3">
+        <div class="col-12 col-md-12 col-lg-12 col-xl-4 mb-3">
             <div class="card card-background">
                 <div class="card-body">
                     <h5 class="card-title d-flex justify-content-center font-dc">Créativités</h5>
