--- a/2.DynamoCraft.UI/src/app/components/footer/footer.component.html
+++ b/2.DynamoCraft.UI/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-dc-2 text-white text-center py-2 footer-gradient">
+<footer class="bg-dc-2 text-white text-center py-2 footer-gradient mt-5">
     <div class="container">
         <p class="mb-0 d-flex justify-content-center">&copy; 2024 DynamoCraft. Tous droits réservés.</p>
         <ul class="list-inline">
