--- a/2.DynamoCraft.UI/src/app/app.component.html
+++ b/2.DynamoCraft.UI/src/app/app.component.html
@@ -2,7 +2,7 @@
     <app-nav-bar></app-nav-bar>
     <div>
         <div class="header-gradient">
-            <div class="container-fluid col-10">
+            <div class="container-fluid">
                 <router-outlet></router-outlet>
             </div>
         </div>
