--- a/2.DynamoCraft.UI/src/app/components/home/home.component.html
+++ b/2.DynamoCraft.UI/src/app/components/home/home.component.html
@@ -1,12 +1,12 @@
-<div class="container-fluid">
+<div class="container">
     <div class="hero text-center py-5 banner-image col-lg-12">
         <h1 class="display-3">Bienvenue sur DynamoCraft</h1>
         <p class="lead d-flex justify-content-center">Explore des mods uniques, créations, et partage ton travail!</p>
     </div>
 
-    <div class="row m-5">
-        <div class="col-12 col-md-12 col-lg-12 col-xl-4 mb-3">
-            <div class="card card-background">
+    <div class="row">
+        <div class="col-sm-12 col-md-4 mb-5">
+            <div class="card card-background mt-5">
                 <div class="card-body">
                     <h5 class="card-title d-flex justify-content-center font-dc">Créativités</h5>
                     <p class="card-text text-black">Explorez une variété de modèles uniques, allant des œuvres d'art aux
@@ -18,8 +18,8 @@
             </div>
         </div>
 
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 mb-3">
-            <div class="card card-background">
+        <div class="col-sm-12 col-md-4 mb-5">
+            <div class="card card-background mt-5">
                 <div class="card-body">
                     <h5 class="card-title d-flex justify-content-center font-dc">Partages</h5>
                     <p class="card-text text-black">Sur notre plateforme, vous avez la possibilité de partager vos
@@ -30,8 +30,8 @@
             </div>
         </div>
 
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 mb-3">
-            <div class="card card-background">
+        <div class="col-sm-12 col-md-4 mb-5">
+            <div class="card card-background mt-5">
                 <div class="card-body">
                     <h5 class="card-title d-flex justify-content-center font-dc">Echanges</h5>
                     <p class="card-text text-black">Ne vous contentez pas de créer, engagez-vous avec la communauté en
@@ -42,3 +42,4 @@
             </div>
         </div>
     </div>
+</div>
