--- a/2.DynamoCraft.UI/src/styles.scss
+++ b/2.DynamoCraft.UI/src/styles.scss
@@ -18,6 +18,7 @@ $couleur-main: rgb(227, 178, 0);
 
 p {
     text-align: justify;
+    overflow: none;
 }
 
 .banner-image {
@@ -85,8 +86,6 @@ p {
 
 .card-body {
     line-height: 2.2;
-    min-height: 300px;
-    min-width: 450px;
 }
 
 ul.nav .nav-link {
@@ -141,22 +140,51 @@ ul.nav .nav-link {
 .card {
     height: 100%;
     background-color: $couleur-main;
+    overflow: hidden;
+    position: relative;
+    border: none;
+    text-align: center;
+    transition: all 0.3s ease-in-out;
 
     &:hover {
         color: white;
         background-color: $couleur-main;
-        transition: all 0.3s ease-in-out;
-        transform: scale(1.2);
+        transform: scale(1.05);
         z-index: 1;
+    }
+
+    .card-img-top {
+        transition: transform 0.3s ease;
+        width: 100%;
+        height: auto;
+    }
+
+    &:hover .card-img-top {
+        transform: scale(1.1);
+    }
+
+    .card-img-overlay {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        color: white;
+        padding: 10px;
+        transition: background 0.3s ease, opacity 0.3s ease;
+        text-align: center;
+        display: flex;
+        align-items: flex-end; /* Aligne le contenu en bas */
+        justify-content: center;
+        opacity: 0; /* Caché par défaut */
+    }
+
+    &:hover .card-img-overlay {
+        background: rgba(0, 0, 0, 0.5);
+        opacity: 1; /* Affiché au survol */
     }
 
     .card-text {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 80%;
-        position: relative;
         font-weight: bold;
         color: black;
         transition: all 0.3s ease-in-out;
