--- a/2.DynamoCraft.UI/src/app/components/nav-bar/nav-bar.component.html
+++ b/2.DynamoCraft.UI/src/app/components/nav-bar/nav-bar.component.html
@@ -10,14 +10,10 @@
                     <a class="nav-link col-12 d-flex justify-content-center" routerLink="/home">Recherche</a>
                 </li>
                 <li>
-                    <a class="nav-link col-12 d-flex justify-content-center" routerLink="/home">Top 10</a>
+                    <a class="nav-link col-12 d-flex justify-content-center" routerLink="/top10">Top 10</a>
                 </li>
                 <li>
-<<<<<<< HEAD
                     <a class="nav-link col-12 d-flex justify-content-center" routerLink="/modele/nouveautes">Nouveautés</a>
-=======
-                    <a class="nav-link col-12 d-flex justify-content-center" routerLink="/home">Nouveautés</a>
->>>>>>> 5d2bb88eaa554108c2dbc2ff41a57a28e512ebbb
                 </li>
                 <li>
                     <a class="nav-link col-12 d-flex justify-content-center" routerLink="/modele/categories">Catégories</a>
