--- a/2.DynamoCraft.UI/src/styles.scss
+++ b/2.DynamoCraft.UI/src/styles.scss
@@ -9,6 +9,14 @@ $couleur-fond: rgb(35, 35, 35);
 $couleur-fond-2: rgb(25, 25, 25);
 $couleur-main: rgb(227, 178, 0);
 
+.couleur-fond-2{
+    background-color: $couleur-fond-2;
+}
+
+.couleur-main{
+    background-color: $couleur-main;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -16,14 +24,11 @@ $couleur-main: rgb(227, 178, 0);
     color: white;
 }
 
-<<<<<<< HEAD
 h5{
     text-decoration: none;
     color:  white;
 }
 
-=======
->>>>>>> 5d2bb88eaa554108c2dbc2ff41a57a28e512ebbb
 p {
     text-align: justify;
     overflow: none;
@@ -145,7 +150,6 @@ ul.nav .nav-link {
     font-family: 'ethnocentric', Courier, monospace;
 }
 
-<<<<<<< HEAD
 /* Variantes de tailles pour les cartes */
 
 /* Taille petite */
@@ -153,10 +157,6 @@ ul.nav .nav-link {
     height: 100%;
     width: 100%;
     max-width: 200px; /* Taille réduite pour petite */
-=======
-.card {
-    height: 100%;
->>>>>>> 5d2bb88eaa554108c2dbc2ff41a57a28e512ebbb
     background-color: $couleur-main;
     overflow: hidden;
     position: relative;
@@ -175,10 +175,7 @@ ul.nav .nav-link {
         transition: transform 0.3s ease;
         width: 100%;
         height: auto;
-<<<<<<< HEAD
         max-height: 150px; /* Taille réduite de l'image pour petite */
-=======
->>>>>>> 5d2bb88eaa554108c2dbc2ff41a57a28e512ebbb
     }
 
     &:hover .card-img-top {
@@ -194,20 +191,13 @@ ul.nav .nav-link {
         transition: background 0.3s ease, opacity 0.3s ease;
         text-align: center;
         display: flex;
-<<<<<<< HEAD
         align-items: flex-end;
         justify-content: center;
         opacity: 0;
-=======
-        align-items: flex-end; /* Aligne le contenu en bas */
-        justify-content: center;
-        opacity: 0; /* Caché par défaut */
->>>>>>> 5d2bb88eaa554108c2dbc2ff41a57a28e512ebbb
     }
 
     &:hover .card-img-overlay {
         background: rgba(0, 0, 0, 0.5);
-<<<<<<< HEAD
         opacity: 1;
     }
 
@@ -327,9 +317,6 @@ ul.nav .nav-link {
     &:hover .card-img-overlay {
         background: rgba(0, 0, 0, 0.5);
         opacity: 1;
-=======
-        opacity: 1; /* Affiché au survol */
->>>>>>> 5d2bb88eaa554108c2dbc2ff41a57a28e512ebbb
     }
 
     .card-text {
@@ -339,5 +326,27 @@ ul.nav .nav-link {
         color: black;
         transition: all 0.3s ease-in-out;
         border-radius: 5px;
+    }
+}
+
+.card-hover {
+    transition: transform 0.3s ease-in-out;
+    &:hover {
+        transform: scale(1.05);
+    }
+}
+
+.profile-circle {
+    transition: transform 0.3s ease-in-out;
+    &:hover {
+        transform: scale(1.1);
+    }
+}
+
+.card-img-top,
+.profile-circle img {
+    transition: transform 0.3s ease-in-out;
+    &:hover {
+        transform: scale(1.1);
     }
 }
